--- a/package.json
+++ b/package.json
@@ -5,16 +5,21 @@
   "type": "module",
   "packageManager": "pnpm@9.1.0",
   "scripts": {
+    "dev": "turbo run dev",
     "dev:tauri": "turbo run dev --filter=@money-insight/tauri",
     "dev:web": "turbo run dev --filter=@money-insight/web",
     "build": "turbo run build",
     "clean": "turbo run clean",
     "type-check": "turbo run type-check",
     "lint": "turbo run lint",
+    "test": "turbo run test",
+    "test:run": "turbo run test:run",
     "format": "prettier --write \"**/*.{ts,tsx,md,json}\""
   },
   "devDependencies": {
     "turbo": "^2.0.0",
-    "prettier": "^3.2.5"
+    "prettier": "^3.2.5",
+    "typescript": "~5.8.3",
+    "vitest": "^3.2.0"
   }
 }
