refactor: standardize structure using IndexedDB only

--- a/packages/ui/package.json
+++ b/packages/ui/package.json
@@ -18,6 +18,13 @@
     "./styles": "./src/styles/global.css",
     "./adapters": "./src/adapters/index.ts",
     "./hooks": "./src/hooks/index.ts",
+    "./services": "./src/services/index.ts",
+    "./services/authService": "./src/services/authService.ts",
+    "./services/syncService": "./src/services/syncService.ts",
+    "./services/transactionService": "./src/services/transactionService.ts",
+    "./services/categoryService": "./src/services/categoryService.ts",
+    "./services/accountService": "./src/services/accountService.ts",
+    "./services/statisticsService": "./src/services/statisticsService.ts",
     "./stores": "./src/stores/spendingStore.ts",
     "./utils": "./src/utils/index.ts",
     "./types": "./src/types/index.ts",
